--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://www.svgrepo.com/show/355670/message-circle-text-solid.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Social media app</title>
+    <title>Secret Talk Only</title>
   </head>
   <body>
     <div id="root"></div>
